// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test card ui structure Match its snapshot When all props exists 1`] = `
<React.Fragment>
  <p
    id="card-title"
  >
    Lorem
  </p>
  <p
    id="card-body"
  >
    Ipsum.
  </p>
</React.Fragment>
`;

exports[`Test card ui structure Match its snapshot When no props exists 1`] = `
<React.Fragment>
  <p
    id="card-title"
  >
    Anonymous
  </p>
  <p
    id="card-body"
  />
</React.Fragment>
`;
